--- a/app/src/main/res/layout/activity_common_reem.xml
+++ b/app/src/main/res/layout/activity_common_reem.xml
@@ -138,7 +138,7 @@
             android:background="@color/divider"
             />
         <TextView
-            android:text="Ream\nNo."
+            android:text="Reel\nNo."
             android:textColor="#000000"
             android:textStyle="bold"
             android:layout_width="0dp"
