--- a/app/src/main/res/layout/activity_final_screen_product.xml
+++ b/app/src/main/res/layout/activity_final_screen_product.xml
@@ -203,16 +203,16 @@
         />
 
 
-    <Button
-        android:id="@+id/create_pdf"
+    <View
+
         android:layout_width="0dp"
         android:layout_weight="4"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_gravity="center"
         android:layout_marginBottom="5dp"
-        android:background="@drawable/border"
+
         android:text="Create Pdf"
         android:textColor="#000000"
         android:layout_marginTop="15dp"
