--- a/app/src/main/res/layout/activity_final_screen_reem_product.xml
+++ b/app/src/main/res/layout/activity_final_screen_reem_product.xml
@@ -139,7 +139,7 @@ android:textSize="12sp"
             android:background="@color/divider"
             />
         <TextView
-            android:text="Ream\nNo."
+            android:text="Reel\nNo."
             android:textColor="#000000"
             android:textStyle="bold"
             android:layout_width="0dp"
@@ -204,16 +204,16 @@ android:textSize="12sp"
             android:layout_marginTop="15dp"
 
             />
-        <Button
-            android:id="@+id/create_pdf"
+        <View
+
             android:layout_width="0dp"
             android:layout_weight="4"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_gravity="center"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/border"
+
             android:text="Create Pdf"
             android:textColor="#000000"
             android:layout_marginTop="15dp"
